# SampleApplication_HOV

./: .gitignore  SAMPLE_APPLICATION_ANALYSIS.md
alarm_output/: readme.adoc
alarm_output/app/: CMakeLists.txt
alarm_output/app/html/: index.html
alarm_output/app/src/: PLifeCycleManagermanifest.json
alarm_output/config/: app_manifest.json
analytics_input_event/: readme.adoc
analytics_input_event/app/: CMakeLists.txt
analytics_input_event/app/html/: index.html
analytics_input_event/app/src/: CMakeLists.txt  PLifeCycleManagermanifest.json
analytics_input_event/app/src/sample_component/: CMakeLists.txt  sample_component.cc
analytics_input_event/app/src/sample_component/includes/: sample_component.h
analytics_input_event/app/src/sample_component/manifests/: SampleComponent_manifest_instance_0.json
analytics_input_event/config/: app_manifest.json
deepstream_raw_image/: readme.adoc
deepstream_raw_image/app/: CMakeLists.txt  deepstream.cmake
deepstream_raw_image/app/html/: index.html
deepstream_raw_image/app/res/ai_models/Primary_Detector/: resnet10.caffemodel_b2_gpu0_int8.engine
deepstream_raw_image/app/src/: CMakeLists.txt  PLifeCycleManagermanifest.json
deepstream_raw_image/app/src/sample_component/: CMakeLists.txt  deepstream_handle.cc  sample_component.cc
deepstream_raw_image/app/src/sample_component/includes/: deepstream_handle.h  i_sample_component.h  sample_component.h
deepstream_raw_image/app/src/sample_component/manifests/: SampleComponent_default_attribute_0.json  SampleComponent_manifest_instance_0.json
deepstream_raw_image/config/: app_manifest.json
display_image/app/: CMakeLists.txt
display_image/app/html/: index.html
display_image/app/includes/: typedef_application.h
display_image/app/src/: CMakeLists.txt  PLifeCycleManagermanifest.json
display_image/config/: app_manifest.json
display_image/readme/: readme.adoc
display_image_opencv/app/: CMakeLists.txt
display_image_opencv/app/html/: index.html
display_image_opencv/app/src/: PLifeCycleManagermanifest.json
display_image_opencv/config/: app_manifest.json
display_image_opencv/readme/: readme.adoc
dockerized_app/: docker-compose.yml
dynamic_event/: readme.adoc
dynamic_event/app/: CMakeLists.txt
dynamic_event/app/html/: index.html
dynamic_event/app/src/: CMakeLists.txt  PLifeCycleManagermanifest.json
dynamic_event/app/src/sample_component/: CMakeLists.txt  sample_component.cc
dynamic_event/app/src/sample_component/includes/: sample_component.h
dynamic_event/app/src/sample_component/manifests/: SampleComponent_manifest_instance_0.json
dynamic_event/config/: app_manifest.json
openblas_sample/: .env  docker-compose.yml  readme.adoc
openblas_sample/app/: CMakeLists.txt  toolchain.cmake
openblas_sample/app/html/: index.html
openblas_sample/app/src/: CMakeLists.txt  PLifeCycleManagermanifest.json
openblas_sample/app/src/sample_component/: CMakeLists.txt  sample_component.cc
openblas_sample/app/src/sample_component/includes/: i_sample_component.h  sample_component.h
openblas_sample/app/src/sample_component/manifests/: SampleComponent_manifest_instance_0.json
openblas_sample/config/: app_manifest.json
raw_audio/: readme.adoc
raw_audio/app/: CMakeLists.txt
raw_audio/app/html/: index.html
raw_audio/app/src/: PLifeCycleManagermanifest.json
raw_audio/config/: app_manifest.json
run_neural_network/: docker-compose.yml
run_yolo/: .env  docker-compose.yml  hand_detector_dev_checklist.md  hand_detector_dev_plan.md  hand_detector_outsource_spec.yaml  issue.md
run_yolo/.claude/: settings.json  settings.local.json
run_yolo/app/: CMakeLists.txt
run_yolo/app/html/: index.html
run_yolo/app/src/: CMakeLists.txt  PLifeCycleManagermanifest.json
run_yolo/config/: app_manifest.json
run_yolo/readme/: mqtt_guide.md
run_yolo/refs/: CLAUDE.md  MQTT_Setup_Guide.md  OpenSDK_Developer_Reference.md  Phase1_Debugging_Lessons.md  Phase3_4_Debugging_Lessons.md  hand_detect_yolov11_raw_postprocess_guide.md  hand_detector_dev_checklist.md  hand_detector_outsource_spec.yaml  mqtt_guide.md
sdcard_input_event/: readme.adoc
sdcard_input_event/app/: CMakeLists.txt
sdcard_input_event/app/html/: index.html
sdcard_input_event/app/src/: PLifeCycleManagermanifest.json
sdcard_input_event/config/: app_manifest.json
sdcard_output_event/: readme.adoc
sdcard_output_event/app/: CMakeLists.txt
sdcard_output_event/config/: app_manifest.json
send_metadata/app/: CMakeLists.txt
send_metadata/app/src/sample_component/: CMakeLists.txt  sample_component.cc
send_metadata/app/src/sample_component/includes/: i_sample_component.h  sample_component.h
send_metadata/app/src/sample_component/manifests/: SampleComponent_default_attribute_0.json  SampleComponent_manifest_instance_0.json
send_metadata/config/: app_manifest.json
send_metadata/readme/: readme.adoc
set_osd_message/: readme.adoc
set_osd_message/app/: CMakeLists.txt
set_osd_message/config/: app_manifest.json
setting_changed_input_event/: readme.adoc
setting_changed_input_event/app/: CMakeLists.txt
setting_changed_input_event/app/src/sample_component/: CMakeLists.txt  sample_component.cc
setting_changed_input_event/app/src/sample_component/includes/: sample_component.h
setting_changed_input_event/app/src/sample_component/manifests/: SampleComponent_manifest_instance_0.json
setting_changed_input_event/config/: app_manifest.json
snapshot_jpeg/: readme.adoc
snapshot_jpeg/app/: CMakeLists.txt
snapshot_jpeg/config/: app_manifest.json
test_sunapi/: readme.adoc
test_sunapi/app/: CMakeLists.txt
test_sunapi/config/: app_manifest.json
upload_file_input_event/: readme.adoc
upload_file_input_event/app/: CMakeLists.txt
upload_file_input_event/config/: app_manifest.json
upload_file_output_event/: readme.adoc
upload_file_output_event/app/: CMakeLists.txt
upload_file_output_event/config/: app_manifest.json
write_event_log/: .env  docker-compose.yml  readme.adoc
write_event_log/app/: CMakeLists.txt
write_event_log/config/: app_manifest.json
(+95 files in other folders)
